fixed css , updated files

--- a/booking/templates/history.html
+++ b/booking/templates/history.html
@@ -68,7 +68,7 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="text-center mb-4">
-                                                    <img src="https://i.ibb.co/M1THsV9/logo.png" alt="Service Ease Logo" style="width: 200px; height: 100px;">
+                                                    <img src="https://i.ibb.co/R4HZmC8V/logo.jpg" alt="SewaGhar Logo" style="width: 200px; height: 100px;">
                                                     
                                                 </div>
                                                 <hr>
